# wattpad-kobo

./: README.md  app.py  pyproject.toml
static/: manifest.json
templates/: base.html.j2  index.html.j2
