[tool.poetry]
name = "wattpad-kobo"
version = "0.1.0"
description = "An app for my sister to read wattpad stuff on a kobo ereader"
authors = ["maxfire2008 <22722054+maxfire2008@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
